@@ -1,3 +1,10 @@
+2000-12-21  Bradford Hovinen  <hovinen@helixcode.com>
+
+	* capplets/new-background-properties/applier.c (set_root_pixmap):
+	Check if nitems is 1, not 4
+	(set_root_pixmap): Do a sanity check on the old pixmap before
+	freeing it
+
 2000-12-18  Bradford Hovinen  <hovinen@helixcode.com>
 
 	* capplets/new-background-properties/applier.c
